[package]
name = "terminal_music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustube = "0.4.0"
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros"] }
symphonia = { version = "0.5.0", features = ["mp3", "isomp4", "aac", "alac"] }
audiotags = "0.2.7182"
rodio = {version = "0.15.0", features = ["symphonia-all"]}
ffmpeg-cli = "0.1.0"
futures = "0.3"